2006-09-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
  - Create $(OUTDIR) if needed, thanks xf10036@hotmail.com
2006-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx, test/test085.cxx:
  - New function prepare_now(), thanks theo@crazygreek.co.uk
2006-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Removed old pqxx.tk URL
 src/connection_base.cxx:
  - Forgot to check result of PQprepare(), thanks theo@crazygreek.co.uk
2006-08-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx, test/test091.cxx:
  - Got absolute_cursor working, I think
  - Fixed infinite recursions on fetch() and move()
  - Extra two-argument move_to()
  - Test didn't account for "end()" element
 include/pqxx/util.hxx, src/util.cxx:
  - Factored reference-counting out of PQAlloc
 *:
  - Whitespace cleanup: spaces before tab
  - Whitespace cleanup: whitespace before end-of-line
2006-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/prepared_statement.cxx,
 src/transaction_base.cxx, src/util.cxx:
  - Binary args to prepared statements got truncated at 0! Thanks Lumir Vanek
  - New from_string<>() with length argument
 include/pqxx/pqxx:
  - Also include binarystring
 include/pqxx/result.hxx:
  - Use new from_string() for strings
  - No longer include field names in conversion errors
 test/test000.cxx:
  - Test new from_string<>() versions
 test/test091.cxx:
  - Still doesn't work
  - Now throw exception rather than go into infinite recursion
 test/test092.cxx:
  - New
  - Tests nul byte in binary parameter to prepared statement
2006-08-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test001.cxx, test/test090.cxx:
  - Test new functions protocol_version() and server_version()
  - Test adorn_name()