@@ -8,3 +8,4 @@
 #define PQXX_HAVE_PQRESULTERRORFIELD 1
 #define PQXX_HAVE_PQUNESCAPEBYTEA 1
 #define PQXX_HAVE_PQFTABLE 1
+#define PQXX_HAVE_PQFTABLECOL 1
